<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_name"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_edit_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_edit_description"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_edit_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_priority"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_type"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupHabitType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonGoodHabit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_good_type"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonBadHabit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_bad_type" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_quantity"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_edit_quantity"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_frequency"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_edit_frequency"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/habit_save" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:padding="0dp"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/habit_cancel"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>