<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_count"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/quantityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/zero" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_frequency"/>


        <EditText
            android:id="@+id/frequencyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/zero" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting"
            android:layout_marginTop="16dp"/>

        <RadioGroup
            android:id="@+id/sortRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sortTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_name" />

            <RadioButton
                android:id="@+id/sortQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_count" />

            <RadioButton
                android:id="@+id/sortFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_frequency" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/applyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/habit_apply"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/habit_reset"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</layout>