<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.habittracker.domain.models.HabitEntity" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/delete_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/cross"
                app:srcCompat="@drawable/cross"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/title_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_name"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:text="@{item.title}"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/description_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_description"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:text="@{item.description}"/>

                <TextView
                    android:id="@+id/details_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_detail"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/habitPriority_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/habit_priority"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:id="@+id/habitPriority"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:text="@{item.priority.id}"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/habitType_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/habit_type"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:id="@+id/habitType"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:text="@{item.type.id}"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/quantity_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/habit_quantity"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:id="@+id/quantity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:text="@{item.count.toString()}"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/frequency_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/habit_frequency"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:id="@+id/frequency"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:text="@{item.frequency.toString()}"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/habitCompleteCount_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/habit_complete_count"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:id="@+id/habitCompleteCount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:text="@{Integer.valueOf(item.doneMarks.size()).toString()}"/>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/complete_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/complete">
                </Button>
            </LinearLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</layout>
